--- a/boilerplate/App/Sagas/StartupSagas.js.ejs
+++ b/boilerplate/App/Sagas/StartupSagas.js.ejs
@@ -1,6 +1,6 @@
 import { put } from 'redux-saga/effects'
 import AppStateActions from '../Redux/AppStateRedux'
-<%_ if (props.authType !== 'session') { _%>
+<%_ if (props.authType === 'jwt' || props.authType === 'oauth2') { _%>
 import LoginActions from '../Redux/LoginRedux'
 <%_ } _%>
 import AccountActions from '../Redux/AccountRedux'
@@ -30,7 +30,7 @@ export function * startup (action) {
     })
   }
 
-  <%_ if (props.authType !== 'session') { _%>
+  <%_ if (props.authType === 'jwt' || props.authType === 'oauth2') { _%>
   yield put(LoginActions.loginLoad())
   <%_ } _%>
   yield put(AccountActions.accountRequest())
