--- a/boilerplate/App/Services/Api.js.ejs
+++ b/boilerplate/App/Services/Api.js.ejs
@@ -1,10 +1,10 @@
 // a library to wrap and simplify api calls
 import apisauce from 'apisauce'
 import AppConfig from '../Config/AppConfig'
-<%_ if (props.authType === 'oauth2' || props.authType === 'uaa') { _%>
+<%_ if (props.authType === 'oauth2') { _%>
 import { Buffer } from 'buffer'
 <%_ } _%>
-<%_ if (props.authType === 'session') { _%>
+<%_ if (props.authType === 'session' || props.authType === 'uaa') { _%>
 import CookieManager from 'react-native-cookies'
 <%_ } _%>
 
@@ -26,7 +26,7 @@ const create = (baseURL = AppConfig.apiUrl) => {
     // 10 second timeout...
     timeout: 10000
   })
-  <%_ if (props.authType === 'session') { _%>
+  <%_ if (props.authType === 'session' || props.authType === 'uaa') { _%>
   api.addAsyncRequestTransform(request => async (request) => {
     const cookies = await CookieManager.get(baseURL)
     if (cookies['XSRF-TOKEN']) {
@@ -50,17 +50,20 @@ const create = (baseURL = AppConfig.apiUrl) => {
   // Since we can't hide from that, we embrace it by getting out of the
   // way at this level.
   //
-  <%_ if (props.authType !== 'session') { _%>
+  <%_ if (props.authType === 'jwt' || props.authType === 'oauth2') { _%>
   const setAuthToken = (userAuth) => api.setHeader('Authorization', 'Bearer ' + userAuth)
   const removeAuthToken = () => api.setHeader('Authorization', '')
   <%_ } _%>
-  <%_ if (props.authType === 'oauth2' || props.authType === 'uaa') { _%>
-  const login = (userAuth) => api.post(<% if (props.authType === 'uaa') { %>AppConfig.uaaBaseUrl + <% } %>'oauth/token', userAuth, {headers: {'Authorization': 'Basic ' + Buffer.from(AppConfig.oauthClientId + ':' + AppConfig.oauthClientSecret).toString('base64'), 'Content-Type': 'application/x-www-form-urlencoded', 'Accept': 'application/json, text/plain, */*'}})
+  <%_ if (props.authType === 'oauth2') { _%>
+  const login = (userAuth) => api.post('oauth/token', userAuth, {headers: {'Authorization': 'Basic ' + Buffer.from(AppConfig.oauthClientId + ':' + AppConfig.oauthClientSecret).toString('base64'), 'Content-Type': 'application/x-www-form-urlencoded', 'Accept': 'application/json, text/plain, */*'}})
   <%_ } else if (props.authType === 'session') { _%>
   const login = (userAuth) => api.post('api/authentication', userAuth, {headers: {'Content-Type': 'application/x-www-form-urlencoded', 'Accept': 'application/json, text/plain, */*'}})
   const logout = () => api.post('api/logout')
   <%_ } else if (props.authType === 'jwt') { _%>
   const login = (userAuth) => api.post('api/authenticate', userAuth)
+  <%_ } else if (props.authType === 'uaa') { _%>
+  const login = (userAuth) => api.post('auth/login', userAuth)
+  const logout = () => api.post('api/logout')
   <%_ } _%>
   const register = (user) => api.post(<% if (props.authType === 'uaa') { %>AppConfig.uaaBaseUrl + <% } %>'api/register', user)
   const forgotPassword = (data) => api.post(<% if (props.authType === 'uaa') { %>AppConfig.uaaBaseUrl + <% } %>'api/account/reset_password/init', data, {headers: {'Content-Type': 'text/plain', 'Accept': 'application/json, text/plain, */*'}})
@@ -85,7 +88,7 @@ const create = (baseURL = AppConfig.apiUrl) => {
   return {
     // a list of the API functions from step 2
     // ignite-jhipster-api-export-needle
-    <%_ if (props.authType === 'session') { _%>
+    <%_ if (props.authType === 'session' || props.authType === 'uaa') { _%>
     logout,
     <%_ } else { _%>
     setAuthToken,
