--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -19,24 +19,24 @@
     "storybook": "storybook start -p 7007"
   },
   "dependencies": {
-    "apisauce": "0.14.0",
+    "apisauce": "0.14.1",
     "format-json": "1.0.3",
     "lodash": "4.17.4",
-    "prop-types": "15.5.10",
+    "prop-types": "15.6.0",
     "querystringify": "1.0.0",
     "ramda": "0.24.1",
-    "react": "16.0.0-alpha.12",
+    "react": "16.0.0",
     "react-native-config": "0.6.0",
-    "react-native-drawer": "2.3.0",
+    "react-native-drawer": "2.5.0",
     "react-native-keyboard-aware-scroll-view": "0.3.0",
-    "react-native-router-flux": "3.38.0",
-    "react-redux": "5.0.4",
-    "redux": "3.6.0",
-    "redux-persist": "4.6.0",
+    "react-native-router-flux": "3.39.1",
+    "react-redux": "5.0.6",
+    "redux": "3.7.2",
+    "redux-persist": "4.10.1",
     "redux-saga": "0.15.6",
     "reduxsauce": "0.4.1",
     "seamless-immutable": "7.1.2",
-    "tcomb-form-native": "0.6.7"
+    "tcomb-form-native": "0.6.10"
   },
   "devDependencies": {
     "@storybook/addon-storyshots": "^3.2.3",
@@ -44,17 +44,17 @@
     "babel-plugin-ignite-ignore-reactotron": "0.3.0",
     "babel-preset-es2015": "6.18.0",
     "babel-preset-react-native": "3.0.2",
-    "buffer": "5.0.5",
+    "buffer": "5.0.8",
     "enzyme": "2.8.2",
-    "jest": "21.0.2",
-    "mockery": "2.0.0",
-    "husky": "0.13.1",
-    "react-addons-test-utils": "15.4.1",
-    "react-dom": "16.0.0-alpha.12",
-    "react-test-renderer": "16.0.0-alpha.12",
-    "reactotron-react-native": "1.12.0",
-    "reactotron-redux": "1.12.0",
-    "reactotron-redux-saga": "1.12.0"
+    "jest": "21.2.1",
+    "mockery": "2.1.0",
+    "husky": "0.14.3",
+    "react-addons-test-utils": "15.6.2",
+    "react-dom": "16.0.0",
+    "react-test-renderer": "16.0.0",
+    "reactotron-react-native": "1.12.3",
+    "reactotron-redux": "1.12.2",
+    "reactotron-redux-saga": "1.12.2"
   },
   "jest": {
     "testMatch": [
