ignore react-native-router-flux react-native mocks

--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -68,6 +68,9 @@
     "setupFiles": [
       "./Tests/Setup"
     ],
+    "modulePathIgnorePatterns": [
+      "node_modules/react-native-router-flux/node_modules"
+    ],
     "coveragePathIgnorePatterns": [
       "App/Services/Api.js",
       "App/Themes/",
