upgrade to react-native-router-flux v4

--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -29,7 +29,7 @@
     "react-native-config": "0.6.0",
     "react-native-drawer": "2.5.0",
     "react-native-keyboard-aware-scroll-view": "0.3.0",
-    "react-native-router-flux": "3.39.1",
+    "react-native-router-flux": "4.0.0-beta.20",
     "react-redux": "5.0.6",
     "redux": "3.7.2",
     "redux-persist": "4.10.1",
