--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -21,6 +21,7 @@
   "dependencies": {
     "apisauce": "0.14.1",
     "format-json": "1.0.3",
+    "identity-obj-proxy": "3.0.0",
     "lodash": "4.17.4",
     "prop-types": "15.6.0",
     "querystringify": "1.0.0",
@@ -61,6 +62,9 @@
       "/node_modules/",
       "Tests/Setup.js"
     ],
+    "moduleNameMapper": {
+      "^.+\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "identity-obj-proxy"
+    },
     "setupFiles": [
       "./Tests/Setup"
     ],
