--- a/boilerplate/App/Redux/CreateStore.js.ejs
+++ b/boilerplate/App/Redux/CreateStore.js.ejs
@@ -5,7 +5,7 @@ import createSagaMiddleware from 'redux-saga'
 import RehydrationServices from '../Services/RehydrationServices'
 import ReduxPersist from '../Config/ReduxPersist'
 <%_ if (props.websockets) { _%>
-import websocketSagas from '../Services/WebsocketService'
+import WebsocketService from '../Services/WebsocketService'
 <%_ } _%>
 // creates the store
 export default (rootReducer, rootSaga) => {
@@ -20,7 +20,7 @@ export default (rootReducer, rootSaga) => {
   const sagaMiddleware = createSagaMiddleware({ sagaMonitor })
   middleware.push(sagaMiddleware)
   <%_ if (props.websockets) { _%>
-  const wsSagaMiddleware = createSagaMiddleware(websocketSagas)
+  const wsSagaMiddleware = createSagaMiddleware(WebsocketService.websocketSagas)
   middleware.push(wsSagaMiddleware)
   <%_ } _%>
 
@@ -46,9 +46,9 @@ export default (rootReducer, rootSaga) => {
 
   // kick off root saga
   let sagasManager = sagaMiddleware.run(rootSaga)
-<%_ if (props.websockets) { _%>
-  let websocketSagaManager = wsSagaMiddleware.run(websocketSagas)
-<%_ } _%>
+  <%_ if (props.websockets) { _%>
+  let websocketSagaManager = wsSagaMiddleware.run(WebsocketService.websocketSagas)
+  <%_ } _%>
 
   return {
     store,
