--- a/boilerplate/Tests/Setup.js.ejs
+++ b/boilerplate/Tests/Setup.js.ejs
@@ -1,3 +1,8 @@
+import { configure } from 'enzyme'
+import Adapter from 'enzyme-adapter-react-16'
+
+configure({ adapter: new Adapter() })
+
 // Mock your external modules here if needed
 jest
 <%_ if (props.authType === 'session' || props.authType === 'uaa') { _%>
