--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -19,39 +19,43 @@
     "storybook": "storybook start -p 7007"
   },
   "dependencies": {
-    "apisauce": "0.14.1",
+    "apisauce": "0.14.2",
     "format-json": "1.0.3",
     "identity-obj-proxy": "3.0.0",
     "lodash": "4.17.4",
     "prop-types": "15.6.0",
     "querystringify": "1.0.0",
     "ramda": "0.25.0",
-    "react-native-config": "0.8.1",
-    "react-native-keyboard-aware-scroll-view": "0.3.0",
-    "react-native-router-flux": "4.0.0-beta.21",
+    "react-native-config": "0.10.0",
+    "react-native-keyboard-aware-scroll-view": "0.4.1",
+    "react-native-router-flux": "4.0.0-beta.24",
     "react-redux": "5.0.6",
     "redux": "3.7.2",
     "redux-persist": "4.10.1",
-    "redux-saga": "0.15.6",
+    "redux-saga": "0.16.0",
     "reduxsauce": "0.7.0",
     "seamless-immutable": "7.1.2",
-    "tcomb-form-native": "0.6.10"
+    "tcomb-form-native": "0.6.11"
   },
   "devDependencies": {
-    "@storybook/addon-storyshots": "^3.2.12",
-    "@storybook/react-native": "^3.2.12",
+    "@storybook/addons": "3.2.16",
+    "@storybook/addon-storyshots": "3.2.16",
+    "@storybook/channels": "3.2.16",
+    "@storybook/react-native": "3.2.16",
+    "babel-core": "6.26.0",
     "babel-plugin-ignite-ignore-reactotron": "0.3.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react-native": "3.0.2",
     "buffer": "5.0.8",
-    "enzyme": "2.8.2",
+    "enzyme": "3.2.0",
+    "enzyme-adapter-react-16": "1.1.0",
     "jest": "21.2.1",
     "mockery": "2.1.0",
     "react-dom": "16.0.0",
     "react-test-renderer": "16.0.0",
-    "reactotron-react-native": "1.12.3",
-    "reactotron-redux": "1.12.2",
-    "reactotron-redux-saga": "1.12.2"
+    "reactotron-react-native": "1.13.2",
+    "reactotron-redux": "1.13.0",
+    "reactotron-redux-saga": "1.13.0"
   },
   "jest": {
     "testMatch": [
