--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -44,7 +44,7 @@
     "@storybook/react-native": "3.2.16",
     "babel-core": "6.26.0",
     "babel-plugin-ignite-ignore-reactotron": "0.3.0",
-    "babel-preset-es2015": "6.24.1",
+    "babel-preset-env": "1.6.1",
     "babel-preset-react-native": "3.0.2",
     "buffer": "5.0.8",
     "enzyme": "3.2.0",
