save websocket prop in ignite.json

--- a/boilerplate/ignite.json.ejs
+++ b/boilerplate/ignite.json.ejs
@@ -4,6 +4,7 @@
   "jhipsterDirectory": "../",
   "authType": "<%= props.authType %>",
   "searchEngine": <%= props.searchEngine %>,
+  "websockets": <%= props.websockets %>,
   "askToOverwrite": true,
   "generators": {
     "entity": "ignite-jhipster"
