--- a/boilerplate/ignite.json.ejs
+++ b/boilerplate/ignite.json.ejs
@@ -5,6 +5,7 @@
   "authType": "<%= props.authType %>",
   "searchEngine": <%= props.searchEngine %>,
   "websockets": <%= props.websockets %>,
+  "socialLogin": <%= props.socialLogin %>,
   "askToOverwrite": true,
   "generators": {
     "entity": "ignite-jhipster"
