--- a/boilerplate/App/Redux/LoginRedux.js.ejs
+++ b/boilerplate/App/Redux/LoginRedux.js.ejs
@@ -8,6 +8,9 @@ const { Types, Creators } = createActions({
   loginFailure: ['error'],
   logoutRequest: null,
   logoutSuccess: null,
+  <%_ if (props.socialLogin) { _%>
+  socialLoginRequest: ['token', 'secret', 'provider'],
+  <%_ } _%>
   <%_ if (props.authType === 'oauth2') { _%>
   loginRefresh: [],
   <%_ } _%>
@@ -34,6 +37,10 @@ export const INITIAL_STATE = Immutable({
 // we're attempting to login
 export const request = (state) => state.merge({ fetching: true })
 
+<%_ if (props.socialLogin) { _%>
+// we're attempting to social login
+export const socialLoginRequest = (state) => state.merge({ fetching: true })
+<%_ } _%>
 // we've successfully logged in
 export const success = (state, data) => {
   const { authToken } = data
@@ -65,6 +72,9 @@ export const reducer = createReducer(INITIAL_STATE, {
   [Types.LOGIN_REQUEST]: request,
   [Types.LOGIN_SUCCESS]: success,
   [Types.LOGIN_FAILURE]: failure,
+  <%_ if (props.socialLogin) { _%>
+  [Types.SOCIAL_LOGIN_REQUEST]: socialLoginRequest,
+  <%_ } _%>
   <%_ if (props.authType === 'jwt' || props.authType === 'oauth2') { _%>
   [Types.LOGIN_LOAD]: load,
   [Types.LOGIN_LOAD_SUCCESS]: loadSuccess,
