--- a/boilerplate/App/Sagas/LoginSagas.js.ejs
+++ b/boilerplate/App/Sagas/LoginSagas.js.ejs
@@ -47,6 +47,28 @@ export function * login (api, { username, password }) {
   }
 }
 
+// attempts to social login
+export function * socialLogin (api, authObj) {
+  const response = yield call(api.socialLogin, authObj)
+
+  // success?
+  if (response.ok) {
+    <%_ if (props.authType === 'jwt') { _%>
+    yield call(api.setAuthToken, response.data.id_token)
+    yield put(LoginActions.loginSuccess(response.data.id_token))
+    <%_} else if (props.authType === 'session') { _%>
+    yield put(LoginActions.loginSuccess(response.data))
+    <%_ } _%>
+    yield put(AccountActions.accountRequest())
+    <%_ if (props.websockets) { _%>
+    WebsocketService.setToken(response.data.id_token)
+    <%_ } _%>
+    yield put({ type: 'RELOGIN_OK' })
+  } else {
+    yield put(LoginActions.loginFailure('WRONG'))
+  }
+}
+
 // attempts to logout
 export function * logout (api) {
   <%_ if (props.authType === 'session' || props.authType === 'uaa') { _%>
