remove extra comma

--- a/boilerplate/App/Config/AppConfig.js.ejs
+++ b/boilerplate/App/Config/AppConfig.js.ejs
@@ -6,7 +6,7 @@ export default {
   <%_ if (props.authType ==='oauth2') { _%>
   oauthClientId: 'jhipsterapp',
   oauthClientSecret: 'my-secret-token-to-change-in-production',
-  <%_ } else if (props.authType ==='uaa') { _%>,
+  <%_ } else if (props.authType ==='uaa') { _%>
   // this is your UAA's base name, lower-cased and followed by a /
   uaaBaseUrl: 'uaa/',
   <%_ } _%>
